@@ -118,7 +118,7 @@ public class Room {
      * @exception IOException if there is a loading error
      */
     public static ArrayList<Room> roomFromJSON(File srcJSONPath) throws org.json.JSONException, IOException {
-        String marshalled = Files.readString(srcJSONPath.toPath(), StandardCharsets.US_ASCII);
+        String marshalled = new String(Files.readAllBytes(srcJSONPath.toPath()));
 
 
         JSONTokener tokener = new JSONTokener(marshalled);
